grammar.js
const PREC = {
  section: 1,
  step: 2,
  modifier: 3,
  amount: 4,
  multiword: 10,
  quantity: 11,
}

module.exports = grammar({
  name: 'cooklang',

  externals: $ => [
    $._newline
  ],

  conflicts: $ => [
    [$._integer, $._digit],
    [$._fractional, $._number],
    [$._unreserved_symbol, $._symbol],
    [$.comment, $._alphabetic],
    [$.metadata, $.metadata], // TODO: is this really necessary?
    [$._multiword],
  ],

  rules: {
    recipe: $ => seq(
      optional($.frontmatter),
      repeat(choice(
        seq($.metadata, $._newline),
        $.section,
        seq($._content_line, $._newline)
      )),
      optional(/\u0000/), // Strange EOF thing
    ),

    _content_line: $ => choice(
      $.step,
      $.comment,
      $.block_comment,
      $.note,
    ),

    frontmatter: $ => seq(
      "---",
      $._newline,
      field('content', optional(alias($._frontmatter_content, $.yaml_content))),
      "---",
      $._newline
    ),

    _frontmatter_content: $ => repeat1(
      seq(
        /[^\n]+/,
        $._newline
      )
    ),

    metadata:           $ => seq(">>", $._word, ":", $._whitespace, choice($._text_item, $._number, $.amount)),
    step:               $ => repeat1(prec.left(PREC.step, choice($._text_item, $.ingredient, $.cookware, $.timer))),
    comment:            $ => seq("-", "-", /.*/),
    block_comment:      $ => seq("[-", /[^-]*-+(?:[^]-][^-]*-+)*/, "]"),
    note:               $ => seq(">", /.*/),
    section:            $ => prec.right(PREC.section, seq(
      field('header', $.section_header),
      $._newline,
      field('content', repeat(seq($._content_line, $._newline)))
    )),

    section_header:     $ => seq(
      /=+/,
      optional(field('name', /[^\n=]*[^\n=\s]/)),
      optional(/\s*=+/)
    ),

    ingredient:         $ => prec.left(PREC.modifier, seq(
      "@",
      choice(
        $.recipe_reference,
        $.name
      ),
      optional(choice(
        seq(
          optional(seq("(", field('note', /[^)]+/), ")")),
          "{",
          repeat($._whitespace),
          optional($.amount),
          repeat($._whitespace),
          "}"
        ),
        seq("(", field('note', /[^)]+/), ")")  // Allow note without braces
      ))
    )),
    cookware:           $ => prec.left(PREC.modifier, seq(
      "#",
      $.name,
      optional(choice(
        seq(
          optional(seq("(", field('note', /[^)]+/), ")")),
          "{",
          repeat($._whitespace),
          optional($.amount),
          repeat($._whitespace),
          "}"
        ),
        seq("(", field('note', /[^)]+/), ")")  // Allow note without braces
      ))
    )),
    timer:              $ => prec.left(PREC.modifier, seq(
      "~",
      optional($.name),
      optional(choice(
        seq(
          optional(seq("(", field('note', /[^)]+/), ")")),
          "{",
          repeat($._whitespace),
          optional($.amount),
          repeat($._whitespace),
          "}"
        ),
        seq("(", field('note', /[^)]+/), ")")  // Allow note without braces
      ))
    )),

    // Ref: https://github.com/cooklang/spec/blob/main/EBNF.md
    name:               $ => prec.left(choice($._word, $._multiword)),
    recipe_reference:   $ => /\.[\/\\][^{}\n(]*/,  // Matches paths starting with ./ or .\ (Windows)
    amount:             $ => prec.left(PREC.amount, choice($.quantity, seq($.quantity, repeat($._whitespace), "%", repeat($._whitespace), $.units))),
    quantity:           $ => prec(PREC.quantity, choice($._number, $._multiword)),
    units:              $ => choice($._word, $._multiword, $._punctuation),

    _multiword:         $ => seq(repeat1(prec.left(PREC.multiword, seq($._word, repeat1($._whitespace)))), optional($._word)),
    _word:              $ => repeat1(choice($._alphabetic, $._digit, $._unreserved_symbol, ".", "/")),
    _text_item:         $ => repeat1(choice($._alphabetic, $._digit, $._symbol, $._punctuation, $._whitespace)),

    _number:            $ => choice($._integer, $._fractional, $._decimal),
    _fractional:        $ => seq($._integer, repeat($._whitespace), "/", repeat($._whitespace), $._integer),
    _decimal:           $ => seq($._integer, ".", $._integer),
    _integer:           $ => choice($._zero, seq($._non_zero_digit, repeat($._digit))),
    _digit:             $ => choice($._zero, $._non_zero_digit),
    _non_zero_digit:    $ => /[1-9]/,
    _zero:              $ => "0",

    _alphabetic:        $ => choice(/\p{L}/, /\p{M}/, "-"), // NOTE: "-" is not in the official grammar.
    _whitespace:        $ => choice(/\p{Zs}/, /\u0009/),
    _punctuation:       $ => choice(/\p{P}/),
    _unreserved_symbol: $ => choice(/\p{S}/), // TODO: remove bad symbol
    _symbol:            $ => choice(/\p{S}/),
  }
});
