corpus/edge_cases.txt
==================
Empty recipe
==================



---

(recipe)

==================
Only whitespace
==================

   

---

(recipe)

==================
Special characters in text
==================

Use the @symbol and #tag carefully with ~timing!

---

(recipe
  (step
    (plain_text)))

==================
Escaped characters in amounts
==================

@ingredient{1%cup\}

---

(recipe
  (step
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)
        (units)))))

==================
Unicode in ingredient names
==================

@café{2%cups}

---

(recipe
  (step
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)
        (units)))))

==================
Very long ingredient name
==================

@very long ingredient name with many words{1}

---

(recipe
  (step
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)))))

==================
Adjacent symbols
==================

@salt{}#pan{}~{5%min}

---

(recipe
  (step
    (ingredient
      name: (ingredient_text))
    (cookware
      name: (cookware_text))
    (timer
      (amount
        (quantity)
        (units)))))

==================
Nested parentheses in note
==================

@ingredient{1}(note (with nested) parens)

---

(recipe
  (step
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity))
      note: )))

==================
All elements in one line
==================

>> servings: 4
= Section Name
-- Comment here
> Note here
In #pan{} add @oil{2%tbsp} and heat ~{3%min} [- block comment -] then serve.

---

(recipe
  (metadata)
  (section
    header: (section_header
      name: )
    content: (comment)
    content: (note)
    content: (step
      (plain_text)
      (cookware
        name: (cookware_text))
      (plain_text)
      (ingredient
        name: (ingredient_text)
        (amount
          (quantity)
          (units)))
      (plain_text)
      (timer
        (amount
          (quantity)
          (units)))
      (plain_text)
      (block_comment)
      (plain_text))))
