corpus/empty_lines
=====================================
Single Empty Line Within Step
=====================================

Mix @flour{200%g} and @water{100%ml}.

Continue mixing until smooth.

---

(recipe 
  (step 
    (ingredient (name) (amount (quantity) (units)))
    (ingredient (name) (amount (quantity) (units)))))

=====================================
Double Empty Line Creates New Step
=====================================

First step here.


Second step here.

---

(recipe 
  (step)
  (step))

=====================================
Empty Lines in Section
=====================================

= Dough =
Mix ingredients.

Continue mixing.


Start kneading.

---

(recipe 
  (section
    header: (section_header name: )
    content: (step)
             (step)))

=====================================
Mixed Content With Empty Lines
=====================================

First step.

> A note here

Second part of first step.


New step starts here.

---

(recipe 
  (step)
  (note)
  (step)
  (step))
