corpus/frontmatter
====================
Simple Frontmatter
====================
---
title: Spaghetti Carbonara
servings: 4
---

Mix @eggs{3} with @parmesan{100%g}.

---

(recipe
  (frontmatter
    content: (yaml_content))
  (step
    (ingredient
      (name)
      (amount
        (quantity)))
    (ingredient
      (name)
      (amount
        (quantity)
        (units)))))

====================
Frontmatter with Tags
====================
---
title: Pasta Recipe
tags:
  - pasta
  - quick
  - italian
---

Cook @pasta{200%g} in boiling water.

---

(recipe
  (frontmatter
    content: (yaml_content))
  (step
    (ingredient
      (name)
      (amount
        (quantity)
        (units)))))

====================
Empty Frontmatter
====================
---
---

Simple recipe step.

---

(recipe
  (frontmatter)
  (step))
