corpus/frontmatter_comprehensive.txt
==================
Simple frontmatter
==================

---
title: Spaghetti Carbonara
---

Cook the pasta.

---

(recipe
  (frontmatter
    content: (yaml_content))
  (step
    (plain_text)))

==================
Frontmatter with tags
==================

---
title: Quick Pasta
tags:
  - pasta
  - quick
  - italian
---

---

(recipe
  (frontmatter
    content: (yaml_content)))

==================
Complex frontmatter
==================

---
title: Beef Stew
servings: 6
prep_time: 20 minutes
cook_time: 2 hours
tags:
  - comfort food
  - winter
nutrition:
  calories: 350
  protein: 25g
---

---

(recipe
  (frontmatter
    content: (yaml_content)))

==================
Empty frontmatter
==================

---
---

Recipe starts here.

---

(recipe
  (frontmatter)
  (step
    (plain_text)))

==================
Frontmatter with special characters
==================

---
title: "Mom's Special Recipe"
description: |
  This is a multi-line
  description with various
  special characters: @#~{}
source: https://example.com/recipe
---

---

(recipe
  (frontmatter
    content: (yaml_content)))
