corpus/notes_comprehensive.txt
==================
Simple note
==================

> Don't burn the roux!

---

(recipe
  (note))

==================
Note with special characters
==================

> TIP: Use @butter{50%g} for richer flavor!

---

(recipe
  (note))

==================
Multiple notes
==================

> First note here
> Second note follows
> Third note as well

---

(recipe
  (note)
  (note)
  (note))

==================
Notes between steps
==================

First step here.

> Important reminder!

Second step here.

---

(recipe
  (step
    (plain_text))
  (note)
  (step
    (plain_text)))

==================
Note in section
==================

= Cooking Tips

> Always taste as you go
> Adjust seasoning at the end

---

(recipe
  (section
    header: (section_header
      name: )
    content: (note)
    content: (note)))

==================
Long note
==================

> This is a very long note that contains lots of information about the recipe including tips, tricks, and various suggestions for making it better

---

(recipe
  (note))
