corpus/section
================
Simple Section
================

= Dough
Mix @flour{200%g} and @water{100%ml} together.

---

(recipe 
  (section
    header: (section_header name: )
    content: (step 
      (ingredient (name) (amount (quantity) (units)))
      (ingredient (name) (amount (quantity) (units))))))

========================
Section with Name
========================

== Filling ==
Add @cheese{100%g}.

---

(recipe 
  (section
    header: (section_header name: )
    content: (step (ingredient (name) (amount (quantity) (units))))))

================================
Section without Name
================================

=
Basic step here.

---

(recipe 
  (section
    header: (section_header)
    content: (step)))

=====================================
Section with Note
=====================================

= Dough
Mix ingredients.
> Don't overmix!

---

(recipe 
  (section
    header: (section_header name: )
    content: (step)
            (note)))

=====================================
Multiple Sections
=====================================

= Section 1 =
First step.

== Section 2 ==
Second step.

---

(recipe 
  (section
    header: (section_header name: )
    content: (step))
  (section
    header: (section_header name: )
    content: (step)))

=====================================
Empty Section
=====================================

= Empty =

---

(recipe 
  (section
    header: (section_header name: )
    content: ))

=====================================
Nameless Section
=====================================

====
nameless section content

---

(recipe 
  (section
    header: (section_header)
    content: (step)))
