corpus/sections_comprehensive.txt
==================
Simple section with name
==================

= Dough

Mix @flour{2%cups} with @water{1%cup}.

---

(recipe
  (section
    header: (section_header
      name: )
    content: (step
      (plain_text)
      (ingredient
        name: (ingredient_text)
        (amount
          (quantity)
          (units)))
      (plain_text)
      (ingredient
        name: (ingredient_text)
        (amount
          (quantity)
          (units))))))

==================
Section with equals on both sides
==================

== Filling ==

Prepare the filling ingredients.

---

(recipe
  (section
    header: (section_header
      name: )
    content: (step
      (plain_text))))

==================
Section without name
==================

===

This is an unnamed section.

---

(recipe
  (section
    header: (section_header)
    content: (step
      (plain_text))))

==================
Multiple sections
==================

= Part One

First section content.

== Part Two

Second section content.

---

(recipe
  (section
    header: (section_header
      name: )
    content: (step
      (plain_text)))
  (section
    header: (section_header
      name: )
    content: (step
      (plain_text))))

==================
Section with multiple steps
==================

= Main Course

Heat the #oven{} to 180°C.

Place @chicken{1%kg} in #roasting pan{}.

Cook for ~{45%minutes}.

---

(recipe
  (section
    header: (section_header
      name: )
    content: (step
      (plain_text)
      (cookware
        name: (cookware_text))
      (plain_text))
    content: (step
      (plain_text)
      (ingredient
        name: (ingredient_text)
        (amount
          (quantity)
          (units)))
      (plain_text)
      (cookware
        name: (cookware_text)))
    content: (step
      (plain_text)
      (timer
        (amount
          (quantity)
          (units))))))

==================
Nested content in section
==================

= Preparation

-- Important note
Mix ingredients carefully.

> Remember to preheat oven!

---

(recipe
  (section
    header: (section_header
      name: )
    content: (comment)
    content: (step
      (plain_text))
    content: (note)))